2000-05-15  Oliver Kiddle  <opk@zsh.org>

	* 11xxx: Src/builtin.c, Src/hashtable.c, Completion/Builtins/_hash,
	Doc/Zsh/builtins.yo, Completion/Builtins/_vars_eq: add -L opt to hash

2000-05-14  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* Src/builtin.c: make integer builtin understand `-i base'.

	* Completion/Base/_jobs: typo in suspended jobs.

	* Doc/Zsh/*: various changes of phrasing.

2000-05-12  Sven Wischnowsky  <wischnow@zsh.org>

	* 11349: Completion/Base/_arguments, Completion/Core/_message,
 	Src/Zle/computil.c: fix for completing options with `_arguments
 	-s'; fix for _message to use `builtin compadd'
	
2000-05-12  Oliver Kiddle  <opk@zsh.org>

	* 11347: Completion/Builtins/_hash, Completion/Builtins/_vars_eq:
	use _arguments for hash completion and add + options for typeset

2000-05-12  Sven Wischnowsky  <wischnow@zsh.org>

	* 11346: Src/Zle/compmatch.c, Src/Zle/compresult.c: fixes for
 	completion matching
	
	* 11335: Src/Zle/compcore.c: fix for compadd -x when there are no
 	matches
	
2000-05-11  Bart Schaefer  <schaefer@zsh.org>

	* 11332: Completion/Commands/_complete_debug: Test descriptors
	correctly for redirect/restore of stderr; plus aesthetic tweak.

	* 11326: Src/exec.c: Don't reinitialize SHTTY upon "exec < file"
	when ZLE is active.

2000-05-11  Oliver Kiddle  <opk@zsh.org>

	* 11329: Completion/User/_groups: redirect ypcat stderr to /dev/null

2000-05-11  Sven Wischnowsky  <wischnow@zsh.org>

	* 11324: Completion/Base/_argument_sets, Completion/Base/_arguments,
 	Src/Zle/computil.c: make _argument_sets add the options as
 	defaults when there is nothing else to complete

	* 11321: Completion/Core/_files: _files used alternative tag-order
 	values even if not needed

	* 11320: Completion/Base/_argument_sets, Completion/Base/_arguments,
 	Doc/Zsh/compsys.yo, Src/Zle/computil.c: allow internally-mutually
 	exclusive sets in _argument_sets; fixes for _argument_sets and the
 	C-code forit
